deployment/observability/elastic-kibana.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: liuyunxin
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: harbor.xa.xshixun.com:7443/hanfeigeng/docker.elastic.co/kibana/kibana:7.17.10-linux-amd64
        ports:
        - containerPort: 5601
          name: http
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: liuyunxin
spec:
  selector:
    app: kibana
  ports:
  - name: http
    port: 5601
    targetPort: 5601
  type: ClusterIP
