deployment/observability/jaeger.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: liuyunxin
  labels:
    app: jaeger
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/component: all-in-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
        app.kubernetes.io/name: jaeger
        app.kubernetes.io/component: all-in-one
    spec:
      containers:
      - name: jaeger
        image: harbor.xa.xshixun.com:7443/hanfeigeng/jaegertracing/all-in-one:1.52-linux-amd64
        ports:
        - containerPort: 5775
          name: zk-compact-trft
          protocol: UDP
        - containerPort: 5778
          name: config-rest
        - containerPort: 6831
          name: jg-compact-trft
          protocol: UDP
        - containerPort: 6832
          name: jg-binary-trft
          protocol: UDP
        - containerPort: 9411
          name: zipkin
        - containerPort: 14267
          name: collector
        - containerPort: 14268
          name: collector-http
        - containerPort: 14269
          name: health-check
        - containerPort: 16685
          name: query-grpc
        - containerPort: 16686
          name: query-http
        - containerPort: 16687
          name: query-health
        - containerPort: 4317
          name: otlp-grpc
        - containerPort: 4318
          name: otlp-http
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: liuyunxin
  labels:
    app: jaeger
    app.kubernetes.io/name: jaeger
    app.kubernetes.io/component: all-in-one
spec:
  selector:
    app: jaeger
  ports:
  - name: zk-compact-trft
    port: 5775
    targetPort: 5775
    protocol: UDP
  - name: config-rest
    port: 5778
    targetPort: 5778
  - name: jg-compact-trft
    port: 6831
    targetPort: 6831
    protocol: UDP
  - name: jg-binary-trft
    port: 6832
    targetPort: 6832
    protocol: UDP
  - name: zipkin
    port: 9411
    targetPort: 9411
  - name: collector
    port: 14267
    targetPort: 14267
  - name: collector-http
    port: 14268
    targetPort: 14268
  - name: health-check
    port: 14269
    targetPort: 14269
  - name: query-grpc
    port: 16685
    targetPort: 16685
  - name: query-http
    port: 16686
    targetPort: 16686
  - name: query-health
    port: 16687
    targetPort: 16687
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  type: ClusterIP
